--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Pancake Breakfast
+name: PSL Pancake Breakfast
 
 # Short bio or description (displayed in the header)
 description: Fundraiser for the Pacifica Sea Lions
